# NYCU-Computer-Vision-2026-HW1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
output/: ensemble_prediction.csv  gmlp_resnet50_trial_46_prediction.csv  prediction.csv
report/: report.tex
src/: dataset.py  main.py  model.py  trainer.py
